--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/Bright_Lavender"
+    android:background="@color/Background_light"
     tools:context="com.assafbt.projects.memorygame.MainActivity"
     android:orientation="vertical">
 
@@ -41,6 +41,9 @@
         android:layout_alignParentBottom="true">
 -->
 
+
+
+    <!-- -->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -102,22 +105,71 @@
             android:layout_marginTop="25dp"
             android:layout_below="@+id/best2View"
             android:layout_alignLeft="@+id/best2View"
-            android:layout_alignStart="@+id/best2View" />
+            android:layout_alignStart="@+id/best2View"
+            />
 
 <!--
     </FrameLayout>
 -->
+
+    <Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/infoBtn"
+    android:text="@string/about_text"
+    android:layout_alignParentBottom="true"
+    android:background="@drawable/play_btn"
+    android:layout_centerHorizontal="true"/>
+
+
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/reset_imgs"
+        android:id="@+id/resetIMG"
+        android:background="@drawable/reset_btn"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@+id/best1View"
+        android:layout_toLeftOf="@+id/best1View" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/spacebar"
+        android:layout_toLeftOf="@+id/resetIMG"
+        android:layout_toStartOf="@+id/resetIMG"
+        android:layout_centerVertical="true"
+
+        />
+
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/reset_score"
         android:id="@+id/resetBTN"
+        android:background="@drawable/reset_btn"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/spacebar"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_toEndOf="@+id/best1View"
+        android:layout_toRightOf="@+id/best1View" />
+
+
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/select_imgs"
+        android:id="@+id/selectBTN"
         android:background="@drawable/play_btn"
-        android:layout_alignBottom="@+id/resetIMG"
-        android:layout_toRightOf="@+id/resetIMG"
-        android:layout_toEndOf="@+id/resetIMG"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp" />
+        android:layout_below="@+id/startBTN"
+        android:layout_marginBottom="13dp"
+        android:layout_centerHorizontal="true"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -126,33 +178,8 @@
         android:id="@+id/startBTN"
         android:background="@drawable/play_btn"
         android:layout_below="@+id/MainTitle2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="34dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/select_imgs"
-        android:id="@+id/selectBTN"
-        android:background="@drawable/play_btn"
-        android:layout_alignBaseline="@+id/startBTN"
-        android:layout_alignBottom="@+id/startBTN"
-        android:layout_toRightOf="@+id/startBTN"
-        android:layout_toEndOf="@+id/startBTN" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/reset_imgs"
-        android:id="@+id/resetIMG"
-        android:background="@drawable/play_btn"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/startBTN"
-        android:layout_toLeftOf="@+id/selectBTN"
-        android:layout_toStartOf="@+id/selectBTN"
-        android:layout_marginRight="26dp"
-        android:layout_marginEnd="26dp" />
+        android:layout_marginTop="13dp"
+        android:layout_centerHorizontal="true"/>
 
 
 </RelativeLayout>
