--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,23 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingStart="@dimen/activity_horizontal_margin"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/Background_green"
     tools:context="com.assafbt.projects.memorygame.GameActivity"
     android:orientation="vertical">
 
-    <FrameLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:id="@+id/gameFrame"
-        android:layout_height="393dp">
 
         <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="left|top"
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
+            android:layout_height="393dp"
+            android:layout_gravity="top"
             android:id="@+id/tableFrame"
             android:textAlignment="center">
 
@@ -31,41 +27,44 @@
                 android:layout_margin="1dp">
 
                 <ImageView
-
                     android:id="@+id/img00"
+                    android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
-                    android:layout_gravity="center_vertical"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img01"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img02"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img03"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
             </TableRow>
 
             <TableRow
@@ -74,41 +73,44 @@
                 android:layout_margin="1dp">
 
                 <ImageView
-
                     android:id="@+id/img10"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img11"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img12"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img13"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
             </TableRow>
 
             <TableRow
@@ -117,41 +119,44 @@
                 android:layout_margin="1dp">
 
                 <ImageView
-
                     android:id="@+id/img20"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img21"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img22"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img23"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
             </TableRow>
 
             <TableRow
@@ -160,44 +165,46 @@
                 android:layout_margin="1dp">
 
                 <ImageView
-
                     android:id="@+id/img30"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img31"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img32"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
-                <ImageView
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
 
+                <ImageView
                     android:id="@+id/img33"
                     android:layout_gravity="center"
                     android:layout_width="50dp"
                     android:layout_height="100dp"
                     android:layout_weight="1"
                     android:scaleType="centerCrop"
-                    android:layout_marginRight="1dp"/>
+                    android:layout_marginEnd="1dp"
+                    android:contentDescription="@string/content_Desc"/>
             </TableRow>
         </TableLayout>
-    </FrameLayout>
 
 
 
@@ -218,7 +225,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="00:00:00"
+            android:text="@string/score_zero"
             android:id="@+id/scoreView"
             android:layout_gravity="center_vertical|end" />
 
